--- a/Host/appsettings.json
+++ b/Host/appsettings.json
@@ -17,7 +17,11 @@
     "Issuer": "https://localhost:5000",
     "Audience": "https://localhost:5000"
   },
-  
+  "Cloudinary": {
+    "CloudName": "dfzyxlhis",
+    "ApiKey": "727632743671687",
+    "ApiSecret": "HDBz41XSYVSjEuPrNbgHAMydJUw"
+  },
   "UserApi": {
     "URL": "https://localhost:5000"
   },
