--- a/Host/appsettings.json
+++ b/Host/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "eCommerceConnection": "Host=localhost;Port=5432;Database=ImageService;Username=postgres;Password=123Pa$$word!;Include Error Detail=true"
+    "Connection": "Host=localhost;Port=5432;Database=ImageService;Username=postgres;Password=123Pa$$word!;Include Error Detail=true"
   },
   "MySerilog": {
     "ProductLog": "ImageAPI"
@@ -27,5 +27,24 @@
   },
   "Application": {
     "Name": "ImageService"
+  },
+  "ImageGen": {
+    "Key": "vk-MV6yDl3Pl13KADWKClcLuorjmg7rBbxp00UR9fNUkm06P"
+  },
+  "spring": {
+    "application": {
+      "name": "eureka-test-service"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "https://discovery.vothanhtuyen.id.vn/eureka/",
+      "shouldRegisterWithEureka": true,
+      "shouldFetchRegistry": false
+    },
+    "instance": {
+      "hostname": "localhost",
+      "port": 5220
+    }
   }
 }
