--- a/Host/appsettings.Development.json
+++ b/Host/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "eCommerceConnection": "Host=dpg-cuoub45svqrc73esqug0-a.singapore-postgres.render.com;Port=5432;Database=imageservice;Username=root;Password=ZRHSGQzjqVp7Ry999Xar08c3g64sInqN;Include Error Detail=true"
+    "Connection": "Host=dpg-cuoub45svqrc73esqug0-a.singapore-postgres.render.com;Port=5432;Database=imageservice;Username=root;Password=ZRHSGQzjqVp7Ry999Xar08c3g64sInqN;Include Error Detail=true"
   },
   "MySerilog": {
     "ProductLog": "ImageAPI"
