--- a/Host/appsettings.Development.json
+++ b/Host/appsettings.Development.json
@@ -35,7 +35,7 @@
       "shouldFetchRegistry": false
     },
     "instance": {
-      "hostname": "localhost",
+      "hostname": "imageservice",
       "port": 5220
     }
   }
