--- a/Host/appsettings.json
+++ b/Host/appsettings.json
@@ -43,7 +43,7 @@
       "shouldFetchRegistry": false
     },
     "instance": {
-      "hostname": "localhost",
+      "hostname": "imageservice",
       "port": 5220
     }
   }
